# rsslite

./: .env  Cargo.toml  rsslite.db  test.db
controllers/: Cargo.toml
controllers/src/rss/: mod.rs  prelude.rs  rss_channel.rs  rss_item.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251012_234721_rss_item.rs  m20251016_170506_rsslite_base.rs  m20251017_005743_logs.rs  m20251017_013724_channel_add_ts.rs  main.rs
models/: Cargo.toml
models/src/: lib.rs  prelude.rs
models/src/rss/: log.rs  mod.rs  prelude.rs  rss_category.rs  rss_channel.rs  rss_cloud.rs  rss_dublin_core_ext.rs  rss_image.rs  rss_item.rs  rss_item_enclosure.rs  rss_item_guid.rs  rss_itunes_item_extension.rs  rss_syndication_ext.rs  rss_text_input.rs
src/: main.rs
tests/: basic_test.rs
utils/: Cargo.toml
utils/src/: db.rs  db_logger.rs  errors.rs  lib.rs
