[package]
name = "rsslite"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "models",
    "migration",
]

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
reqwest = "0.12.23"
rss = { version = "2.0.12", features = ["serde"] }
sea-orm = { version = "1.1.16", features = ["debug-print", "runtime-tokio-rustls", "sqlx-sqlite"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
models =  { path = "models" }
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
